Archive2/70/a058540a8ac1a7/output
main.cpp:16:3: error: no matching function for call to 'fn2'
  fn2(1);
  ^~~
main.cpp:10:6: note: candidate function not viable: no known conversion from 'int' to 'const S2' for 1st argument
void fn2(const S2& s2) {}
     ^
1 error generated.
